--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "1one-project",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,10 @@
   },
   "author": "hooray",
   "license": "ISC",
+  "repository": {
+  	"type": "git",
+  	"url": "https://github.com/hooray/1one-project.git"
+  },
   "dependencies": {
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
